// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Destruction Warlock Analyzer analyzers Abilities matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers Abilities matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Destruction Warlock Analyzer analyzers AlwaysBeCasting matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <img
            alt="Downtime"
            className="icon game "
            src="//render-us.worldofwarcraft.com/icons/56/spell_mage_altertime.jpg"
          />
           
          Downtime
        </label>
        <div
          className="value"
        >
          10.84 %
        </div>
        <div
          style={
            Object {
              "marginTop": "0.5em",
            }
          }
        >
          <div
            className="statistic-box-bar"
          >
            <div
              className="stat-health-bg"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "width": "89.15935427051126%",
                }
              }
            >
              <img
                alt="Active time"
                src="/img/sword.png"
              />
            </div>
            <div
              className="remainder DeathKnight-bg"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
            >
              <img
                alt="Downtime"
                src="/img/afk.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers AlwaysBeCasting matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers ArcaneTorrent matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ArcaneTorrent matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Backdraft matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=117828"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            <img
              alt="Backdraft"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
            />
          </a>
           
          Wasted Backdraft procs
        </label>
        <div
          className="value"
        >
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers Backdraft matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers BurstingFlare matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers BurstingFlare matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Cataclysm matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers Cataclysm matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers ChannelDemonfire matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChannelDemonfire matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChaosShards matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChaosShards matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChaoticInferno matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers ChaoticInferno matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Checklist matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers Checklist matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Destruction Warlock Analyzer analyzers CooldownThroughputTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers CooldownThroughputTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers CrashingChaos matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=277644"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            <img
              alt="Crashing Chaos"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_chaosbolt.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=277644"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            Crashing Chaos
          </a>
        </label>
        <div
          className="value"
        >
          <img
            alt="Damage"
            className="icon"
            src="/img/sword.png"
          />
           
          ≈
          1,857
           DPS 
          <small>
            9.44
             % of total
          </small>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers CrashingChaos matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers CrashingChaosChaoticInfernoCore matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers CrashingChaosChaoticInfernoCore matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers Eradication matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Eradication matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers FireAndBrimstone matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers FireAndBrimstone matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Flashover matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers Flashover matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers Flashpoint matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Flashpoint matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers GrimoireOfSacrifice matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers GrimoireOfSacrifice matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers GrimoireOfSupremacy matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers GrimoireOfSupremacy matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers Havoc matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=80240"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            <img
              alt="Havoc"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_baneofhavoc.jpg"
            />
          </a>
           
          Damage cleaved
        </label>
        <div
          className="value"
        >
          0.40 % / 78 DPS
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers Havoc matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers ImmolateUptime matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=157736"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            <img
              alt="Immolate"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_fire_immolation.jpg"
            />
          </a>
           
          Immolate uptime
        </label>
        <div
          className="value"
        >
          99.25 %
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers ImmolateUptime matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers Inferno matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Inferno matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers InternalCombustion matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers InternalCombustion matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers RainOfFire matches the statistic snapshot 1`] = `null`;

exports[`The Destruction Warlock Analyzer analyzers RainOfFire matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers ReverseEntropy matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers ReverseEntropy matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers RoaringBlaze matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers RoaringBlaze matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers RollingHavoc matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers RollingHavoc matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Shadowburn matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers Shadowburn matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulConduit matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulConduit matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulFire matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulFire matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Destruction Warlock Analyzer analyzers SoulShardDetails matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <img
            alt="Wasted Soul Shards"
            src="warlock_soulshard_bw.jpg"
          />
           
          Wasted Soul Shard Fragments
        </label>
        <div
          className="value"
        >
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers SoulShardDetails matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers SoulShardTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers SoulShardTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers SpellUsable matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Destruction Warlock Analyzer analyzers SpellUsable matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer analyzers TalentStatisticBox matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic statistic-box statistic-box-list"
  >
    <div
      className="panel-heading"
    >
      <h2>
        Talents
      </h2>
    </div>
    <div
      className="panel-body items"
    >
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <a
            href="http://wowhead.com/spell=267115"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
            />
             
            Flashover
          </a>
           bonus damage
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            style={Object {}}
          >
            2.01 % / 395 DPS
          </dfn>
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          Bonus 
          <a
            href="http://wowhead.com/spell=117828"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
            />
             
            Backdraft
          </a>
           stacks from 
          <a
            href="http://wowhead.com/spell=267115"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
            />
             
            Flashover
          </a>
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            style={Object {}}
          >
            26
          </dfn>
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <a
            href="http://wowhead.com/spell=205148"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraftgreen.jpg"
            />
             
            Reverse Entropy
          </a>
           uptime
        </div>
        <div
          className="flex-sub text-right"
        >
          42.84 %
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <a
            href="http://wowhead.com/spell=152108"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/achievement_zone_cataclysm.jpg"
            />
             
            Cataclysm
          </a>
           damage
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            style={Object {}}
          >
            5.87 % / 1,154 DPS
          </dfn>
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          Average 
          <a
            href="http://wowhead.com/spell=266086"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/warlock_grimoireofcommand.jpg"
            />
             
            Grimoire of Supremacy
          </a>
           stacks
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            style={Object {}}
          >
            15.00
          </dfn>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Destruction Warlock Analyzer analyzers TalentStatisticBox matches the suggestions snapshot 1`] = `Array []`;

exports[`The Destruction Warlock Analyzer should match the checklist snapshot 1`] = `
<ul
  className="checklist"
>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Use your core spells
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Destruction Warlocks have a simple rotation core. Maintain your 
            <a
              href="http://wowhead.com/spell=348"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_fire_immolation.jpg"
              />
               
              Immolate
            </a>
             on all enemies if possible, don't waste your 
            <a
              href="http://wowhead.com/spell=17962"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_fire_fireball.jpg"
              />
               
              Conflagrate
            </a>
             and 
            <a
              href="http://wowhead.com/spell=117828"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
              />
               
              Backdraft
            </a>
             stacks. Use 
            <a
              href="http://wowhead.com/spell=80240"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_baneofhavoc.jpg"
              />
               
              Havoc
            </a>
             whenever there's something else to cleave.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=348"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_fire_immolation.jpg"
                  />
                   
                  Immolate
                </a>
                 uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  99.25%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=17962"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_fire_fireball.jpg"
                  />
                   
                  Conflagrate
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  102.31%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Wasted 
                <a
                  href="http://wowhead.com/spell=117828"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_backdraft.jpg"
                  />
                   
                  Backdraft
                </a>
                 stacks per minute
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  1
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Don't cap your Soul Shard Fragments
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Soul Shards are your most important resource and since you are in control of their generation, it's very important to plan your rotation and not let them cap.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Wasted fragments per minute
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                  <dfn
                    className=""
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    style={Object {}}
                  >
                     
                    1
                     
                     
                  </dfn>
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Use your cooldowns and talents
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Be mindful of your talent choices and use them when it's appropriate. It's okay to hold on a cooldown for a little bit when the encounter requires it (burn phases or priority targets), but generally speaking you should use them as much as you can.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=152108"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/achievement_zone_cataclysm.jpg"
                  />
                   
                  Cataclysm
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=1122"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_summoninfernal.jpg"
                  />
                   
                  Summon Infernal
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=113858"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_soulburn.jpg"
                  />
                   
                  Dark Soul: Instability
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable expanded failed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Use your utility and defensive spells
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#ac1f39",
                  "width": "0%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Use other spells in your toolkit to your advantage. For example, you can try to minimize necessary movement by using 
            <a
              href="http://wowhead.com/spell=111771"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_demonicportal_green.jpg"
              />
               
              Demonic Gateway
            </a>
            , 
            <a
              href="http://wowhead.com/spell=268358"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccirclesummon.jpg"
              />
               
              Demonic Circle
            </a>
            , 
            <a
              href="http://wowhead.com/spell=111400"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/ability_deathwing_sealarmorbreachtga.jpg"
              />
               
              Burning Rush
            </a>
             or mitigate incoming damage with 
            <a
              href="http://wowhead.com/spell=104773"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demonictactics.jpg"
              />
               
              Unending Resolve
            </a>
            /
            <a
              href="http://wowhead.com/spell=108416"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/warlock_sacrificial_pact.jpg"
              />
               
              Dark Pact
            </a>
            .
            <br />
            While you shouldn't cast these defensives on cooldown, be aware of them and use them whenever effective. Not using them at all indicates you might not be aware of them or not using them optimally.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=48020"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccircleteleport.jpg"
                  />
                   
                  Demonic Circle Teleport
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=104773"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demonictactics.jpg"
                  />
                   
                  Unending Resolve
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Always be casting
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            You should try to avoid doing nothing during the fight. When you have to move, try to save some 
            <a
              href="http://wowhead.com/spell=17962"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_fire_fireball.jpg"
              />
               
              Conflagrate
            </a>
             charges or try to utilize 
            <a
              href="http://wowhead.com/spell=268358"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccirclesummon.jpg"
              />
               
              Teleport
            </a>
             or 
            <a
              href="http://wowhead.com/spell=111771"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_demonicportal_green.jpg"
              />
               
              Gateway
            </a>
             to reduce the movement even further.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Downtime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  10.84%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Be well prepared
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Being well prepared with food, flasks, potions and enchants is an easy way to improve your performance.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                All items enchanted
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  3
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Using high quality enchants
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  3
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a pre-potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a second potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Flask used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                High quality food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
